--- a/css/main.css
+++ b/css/main.css
@@ -2,10 +2,13 @@ body {
     height: 100%;
     width: 100%;
     text-align: center;
+        background-image: url("../images/background.png");
+    overflow: hidden;
+    margin: 0;
 }
 
 path { 
-    fill: steelblue; 
+    fill: #aaa; 
     opacity: 0.8;
 }
 
@@ -25,5 +28,5 @@ div.tooltip {
 .link {
   fill: none;
   stroke: #000;
-  stroke-opacity: .2;
+  stroke-opacity: .1;
 }
